--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2948,8 +2948,8 @@ details.collapse summary::-webkit-details-marker {
     bottom: 0
 }
 
-.bottom-20 {
-    bottom: 5rem
+.bottom-5 {
+    bottom: 1.25rem
 }
 
 .left-0 {
@@ -2962,6 +2962,10 @@ details.collapse summary::-webkit-details-marker {
 
 .top-0 {
     top: 0
+}
+
+.top-40 {
+    top: 10rem
 }
 
 .z-10 {
@@ -2984,6 +2988,14 @@ details.collapse summary::-webkit-details-marker {
     margin: .25rem
 }
 
+.m-4 {
+    margin: 1rem
+}
+
+.m-5 {
+    margin: 1.25rem
+}
+
 .-mx-4 {
     margin-left: -1rem;
     margin-right: -1rem
@@ -2999,9 +3011,18 @@ details.collapse summary::-webkit-details-marker {
     margin-bottom: 6rem
 }
 
+.my-4 {
+    margin-top: 1rem;
+    margin-bottom: 1rem
+}
+
 .my-8 {
     margin-top: 2rem;
     margin-bottom: 2rem
+}
+
+.-mt-16 {
+    margin-top: -4rem
 }
 
 .mb-1 {
@@ -3060,6 +3081,10 @@ details.collapse summary::-webkit-details-marker {
     margin-top: .5rem
 }
 
+.mt-20 {
+    margin-top: 5rem
+}
+
 .mt-3 {
     margin-top: .75rem
 }
@@ -3100,6 +3125,10 @@ details.collapse summary::-webkit-details-marker {
     height: 0px
 }
 
+.h-1 {
+    height: .25rem
+}
+
 .h-12 {
     height: 3rem
 }
@@ -3114,6 +3143,14 @@ details.collapse summary::-webkit-details-marker {
 
 .h-6 {
     height: 1.5rem
+}
+
+.h-60 {
+    height: 15rem
+}
+
+.h-80 {
+    height: 20rem
 }
 
 .h-\[130vh\] {
@@ -3148,6 +3185,10 @@ details.collapse summary::-webkit-details-marker {
     width: 1rem
 }
 
+.w-48 {
+    width: 12rem
+}
+
 .w-5\/6 {
     width: 83.333333%
 }
@@ -3166,6 +3207,10 @@ details.collapse summary::-webkit-details-marker {
 
 .max-w-2xl {
     max-width: 42rem
+}
+
+.max-w-6xl {
+    max-width: 72rem
 }
 
 .max-w-full {
@@ -3212,6 +3257,10 @@ details.collapse summary::-webkit-details-marker {
 
 .cursor-pointer {
     cursor: pointer
+}
+
+.grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr))
 }
 
 .grid-cols-12 {
@@ -3262,6 +3311,10 @@ details.collapse summary::-webkit-details-marker {
     gap: 1rem
 }
 
+.gap-5 {
+    gap: 1.25rem
+}
+
 .gap-x-6 {
     -moz-column-gap: 1.5rem;
     column-gap: 1.5rem
@@ -3271,6 +3324,12 @@ details.collapse summary::-webkit-details-marker {
     --tw-space-x-reverse: 0;
     margin-right: calc(.25rem * var(--tw-space-x-reverse));
     margin-left: calc(.25rem * calc(1 - var(--tw-space-x-reverse)))
+}
+
+.space-x-2>:not([hidden])~:not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(.5rem * calc(1 - var(--tw-space-x-reverse)))
 }
 
 .space-x-3>:not([hidden])~:not([hidden]) {
@@ -3283,6 +3342,12 @@ details.collapse summary::-webkit-details-marker {
     --tw-space-x-reverse: 0;
     margin-right: calc(1rem * var(--tw-space-x-reverse));
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)))
+}
+
+.space-y-2>:not([hidden])~:not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(.5rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(.5rem * var(--tw-space-y-reverse))
 }
 
 .space-y-3>:not([hidden])~:not([hidden]) {
@@ -3313,10 +3378,6 @@ details.collapse summary::-webkit-details-marker {
     place-self: center
 }
 
-.justify-self-start {
-    justify-self: start
-}
-
 .overflow-hidden {
     overflow: hidden
 }
@@ -3343,6 +3404,10 @@ details.collapse summary::-webkit-details-marker {
 
 .rounded-none {
     border-radius: 0
+}
+
+.border-0 {
+    border-width: 0px
 }
 
 .border-4 {
@@ -3418,12 +3483,20 @@ details.collapse summary::-webkit-details-marker {
     object-position: center
 }
 
+.p-1 {
+    padding: .25rem
+}
+
 .p-10 {
     padding: 2.5rem
 }
 
 .p-2 {
     padding: .5rem
+}
+
+.p-3 {
+    padding: .75rem
 }
 
 .p-4 {
@@ -3517,6 +3590,10 @@ details.collapse summary::-webkit-details-marker {
     padding-bottom: 1.5rem
 }
 
+.pb-8 {
+    padding-bottom: 2rem
+}
+
 .pl-6 {
     padding-left: 1.5rem
 }
@@ -3595,6 +3672,11 @@ details.collapse summary::-webkit-details-marker {
     line-height: 1.75rem
 }
 
+.text-xs {
+    font-size: .75rem;
+    line-height: 1rem
+}
+
 .font-bold {
     font-weight: 700
 }
@@ -3613,6 +3695,10 @@ details.collapse summary::-webkit-details-marker {
 
 .font-semibold {
     font-weight: 600
+}
+
+.uppercase {
+    text-transform: uppercase
 }
 
 .capitalize {
@@ -3713,6 +3799,10 @@ details.collapse summary::-webkit-details-marker {
 .transition-all {
     transition-property: all;
     transition-timing-function: cubic-bezier(.4, 0, .2, 1);
+    transition-duration: .15s
+}
+
+.duration-150 {
     transition-duration: .15s
 }
 
@@ -3821,6 +3911,10 @@ details.collapse summary::-webkit-details-marker {
     color: rgb(255 255 255 / var(--tw-text-opacity))
 }
 
+.hover\:underline:hover {
+    text-decoration-line: underline
+}
+
 .hover\:shadow-lg:hover {
     --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / .1), 0 4px 6px -4px rgb(0 0 0 / .1);
     --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -3844,9 +3938,37 @@ details.collapse summary::-webkit-details-marker {
     --tw-shadow: var(--tw-shadow-colored)
 }
 
+.focus\:bg-\[\#FFE200\]:focus {
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 226 0 / var(--tw-bg-opacity))
+}
+
+.focus\:shadow-lg:focus {
+    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / .1), 0 4px 6px -4px rgb(0 0 0 / .1);
+    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
+}
+
 .focus\:outline-none:focus {
     outline: 2px solid transparent;
     outline-offset: 2px
+}
+
+.focus\:ring-0:focus {
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
+}
+
+.active\:bg-\[\#FFE200\]:active {
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 226 0 / var(--tw-bg-opacity))
+}
+
+.active\:shadow-lg:active {
+    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / .1), 0 4px 6px -4px rgb(0 0 0 / .1);
+    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
 }
 
 .group:hover .group-hover\:h-full {
@@ -3862,6 +3984,11 @@ details.collapse summary::-webkit-details-marker {
 }
 
 @media (prefers-color-scheme: dark) {
+    .dark\:bg-\[\#FFE200\] {
+        --tw-bg-opacity: 1;
+        background-color: rgb(255 226 0 / var(--tw-bg-opacity))
+    }
+
     .dark\:bg-gray-500 {
         --tw-bg-opacity: 1;
         background-color: rgb(107 114 128 / var(--tw-bg-opacity))
@@ -3883,6 +4010,11 @@ details.collapse summary::-webkit-details-marker {
         grid-column: span 2 / span 2
     }
 
+    .sm\:mx-12 {
+        margin-left: 3rem;
+        margin-right: 3rem
+    }
+
     .sm\:-mt-4 {
         margin-top: -1rem
     }
@@ -3893,6 +4025,10 @@ details.collapse summary::-webkit-details-marker {
 
     .sm\:hidden {
         display: none
+    }
+
+    .sm\:h-96 {
+        height: 24rem
     }
 
     .sm\:h-\[225vh\] {
@@ -3929,6 +4065,11 @@ details.collapse summary::-webkit-details-marker {
         margin-bottom: calc(1.5rem * var(--tw-space-y-reverse))
     }
 
+    .sm\:px-10 {
+        padding-left: 2.5rem;
+        padding-right: 2.5rem
+    }
+
     .sm\:px-6 {
         padding-left: 1.5rem;
         padding-right: 1.5rem
@@ -3950,6 +4091,11 @@ details.collapse summary::-webkit-details-marker {
 
     .sm\:text-left {
         text-align: left
+    }
+
+    .sm\:text-4xl {
+        font-size: 2.25rem;
+        line-height: 2.5rem
     }
 
     .sm\:text-xl {
@@ -4059,9 +4205,17 @@ details.collapse summary::-webkit-details-marker {
         width: 100%
     }
 
+    .lg\:max-w-2xl {
+        max-width: 42rem
+    }
+
     .lg\:-translate-y-12 {
         --tw-translate-y: -3rem;
         transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skew(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
+    }
+
+    .lg\:grid-cols-2 {
+        grid-template-columns: repeat(2, minmax(0, 1fr))
     }
 
     .lg\:flex-row {
@@ -4088,6 +4242,10 @@ details.collapse summary::-webkit-details-marker {
 
     .lg\:place-self-center {
         place-self: center
+    }
+
+    .lg\:rounded-md {
+        border-radius: .375rem
     }
 
     .lg\:px-0 {
@@ -4190,6 +4348,10 @@ details.collapse summary::-webkit-details-marker {
 
     .xl\:mt-20 {
         margin-top: 5rem
+    }
+
+    .xl\:mt-5 {
+        margin-top: 1.25rem
     }
 
     .xl\:w-1\/2 {
