--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3259,10 +3259,6 @@ details.collapse summary::-webkit-details-marker {
     cursor: pointer
 }
 
-.grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr))
-}
-
 .grid-cols-12 {
     grid-template-columns: repeat(12, minmax(0, 1fr))
 }
@@ -4043,6 +4039,10 @@ details.collapse summary::-webkit-details-marker {
         width: 33.333333%
     }
 
+    .sm\:grid-cols-1 {
+        grid-template-columns: repeat(1, minmax(0, 1fr))
+    }
+
     .sm\:flex-row {
         flex-direction: row
     }
@@ -4360,6 +4360,10 @@ details.collapse summary::-webkit-details-marker {
 
     .xl\:w-28 {
         width: 7rem
+    }
+
+    .xl\:grid-cols-2 {
+        grid-template-columns: repeat(2, minmax(0, 1fr))
     }
 
     .xl\:grid-cols-5 {
