--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -4330,6 +4330,10 @@ details.collapse summary::-webkit-details-marker {
 }
 
 @media (min-width: 1280px) {
+    .xl\:col-span-1 {
+        grid-column: span 1 / span 1
+    }
+
     .xl\:col-span-2 {
         grid-column: span 2 / span 2
     }
