--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1868,6 +1868,16 @@ html {
         opacity: 1
     }
 
+    .btm-nav>*.disabled:hover,
+    .btm-nav>*[disabled]:hover {
+        pointer-events: none;
+        --tw-border-opacity: 0;
+        background-color: hsl(var(--n) / var(--tw-bg-opacity));
+        --tw-bg-opacity: .1;
+        color: hsl(var(--bc) / var(--tw-text-opacity));
+        --tw-text-opacity: .2
+    }
+
     .btn:hover {
         --tw-border-opacity: 1;
         border-color: hsl(var(--b3) / var(--tw-border-opacity));
@@ -2168,6 +2178,16 @@ html {
     border-top-width: 2px;
     --tw-bg-opacity: 1;
     background-color: hsl(var(--b1) / var(--tw-bg-opacity))
+}
+
+.btm-nav>*.disabled,
+.btm-nav>*[disabled] {
+    pointer-events: none;
+    --tw-border-opacity: 0;
+    background-color: hsl(var(--n) / var(--tw-bg-opacity));
+    --tw-bg-opacity: .1;
+    color: hsl(var(--bc) / var(--tw-text-opacity));
+    --tw-text-opacity: .2
 }
 
 .btm-nav>* .label {
@@ -2996,6 +3016,11 @@ details.collapse summary::-webkit-details-marker {
     margin: 1.25rem
 }
 
+.-mx-3 {
+    margin-left: -.75rem;
+    margin-right: -.75rem
+}
+
 .-mx-4 {
     margin-left: -1rem;
     margin-right: -1rem
@@ -3217,6 +3242,10 @@ details.collapse summary::-webkit-details-marker {
     max-width: 100%
 }
 
+.max-w-lg {
+    max-width: 32rem
+}
+
 .max-w-screen-xl {
     max-width: 1280px
 }
@@ -3257,6 +3286,28 @@ details.collapse summary::-webkit-details-marker {
 
 .cursor-pointer {
     cursor: pointer
+}
+
+.resize-none {
+    resize: none
+}
+
+.resize-y {
+    resize: vertical
+}
+
+.resize-x {
+    resize: horizontal
+}
+
+.resize {
+    resize: both
+}
+
+.appearance-none {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none
 }
 
 .grid-cols-12 {
@@ -3503,6 +3554,11 @@ details.collapse summary::-webkit-details-marker {
     padding: 1.5rem
 }
 
+.px-3 {
+    padding-left: .75rem;
+    padding-right: .75rem
+}
+
 .px-4 {
     padding-left: 1rem;
     padding-right: 1rem
@@ -3713,6 +3769,10 @@ details.collapse summary::-webkit-details-marker {
     line-height: 1.25
 }
 
+.tracking-wide {
+    letter-spacing: .025em
+}
+
 .text-\[\#FFE200\] {
     --tw-text-opacity: 1;
     color: rgb(255 226 0 / var(--tw-text-opacity))
@@ -3728,6 +3788,16 @@ details.collapse summary::-webkit-details-marker {
     color: rgb(156 163 175 / var(--tw-text-opacity))
 }
 
+.text-gray-600 {
+    --tw-text-opacity: 1;
+    color: rgb(75 85 99 / var(--tw-text-opacity))
+}
+
+.text-gray-700 {
+    --tw-text-opacity: 1;
+    color: rgb(55 65 81 / var(--tw-text-opacity))
+}
+
 .text-gray-900 {
     --tw-text-opacity: 1;
     color: rgb(17 24 39 / var(--tw-text-opacity))
@@ -3736,6 +3806,11 @@ details.collapse summary::-webkit-details-marker {
 .text-neutral-800 {
     --tw-text-opacity: 1;
     color: rgb(38 38 38 / var(--tw-text-opacity))
+}
+
+.text-red-500 {
+    --tw-text-opacity: 1;
+    color: rgb(239 68 68 / var(--tw-text-opacity))
 }
 
 .text-white {
@@ -4113,8 +4188,20 @@ details.collapse summary::-webkit-details-marker {
         margin-right: .5rem
     }
 
+    .md\:flex {
+        display: flex
+    }
+
     .md\:w-1\/2 {
         width: 50%
+    }
+
+    .md\:w-1\/3 {
+        width: 33.333333%
+    }
+
+    .md\:w-2\/3 {
+        width: 66.666667%
     }
 
     .md\:w-4\/12 {
@@ -4131,6 +4218,10 @@ details.collapse summary::-webkit-details-marker {
 
     .md\:flex-row {
         flex-direction: row
+    }
+
+    .md\:items-center {
+        align-items: center
     }
 
     .md\:justify-between {
