--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1868,16 +1868,6 @@ html {
         opacity: 1
     }
 
-    .btm-nav>*.disabled:hover,
-    .btm-nav>*[disabled]:hover {
-        pointer-events: none;
-        --tw-border-opacity: 0;
-        background-color: hsl(var(--n) / var(--tw-bg-opacity));
-        --tw-bg-opacity: .1;
-        color: hsl(var(--bc) / var(--tw-text-opacity));
-        --tw-text-opacity: .2
-    }
-
     .btn:hover {
         --tw-border-opacity: 1;
         border-color: hsl(var(--b3) / var(--tw-border-opacity));
@@ -2178,16 +2168,6 @@ html {
     border-top-width: 2px;
     --tw-bg-opacity: 1;
     background-color: hsl(var(--b1) / var(--tw-bg-opacity))
-}
-
-.btm-nav>*.disabled,
-.btm-nav>*[disabled] {
-    pointer-events: none;
-    --tw-border-opacity: 0;
-    background-color: hsl(var(--n) / var(--tw-bg-opacity));
-    --tw-bg-opacity: .1;
-    color: hsl(var(--bc) / var(--tw-text-opacity));
-    --tw-text-opacity: .2
 }
 
 .btm-nav>* .label {
@@ -3016,11 +2996,6 @@ details.collapse summary::-webkit-details-marker {
     margin: 1.25rem
 }
 
-.-mx-3 {
-    margin-left: -.75rem;
-    margin-right: -.75rem
-}
-
 .-mx-4 {
     margin-left: -1rem;
     margin-right: -1rem
@@ -3242,10 +3217,6 @@ details.collapse summary::-webkit-details-marker {
     max-width: 100%
 }
 
-.max-w-lg {
-    max-width: 32rem
-}
-
 .max-w-screen-xl {
     max-width: 1280px
 }
@@ -3288,26 +3259,8 @@ details.collapse summary::-webkit-details-marker {
     cursor: pointer
 }
 
-.resize-none {
-    resize: none
-}
-
-.resize-y {
-    resize: vertical
-}
-
-.resize-x {
-    resize: horizontal
-}
-
-.resize {
-    resize: both
-}
-
-.appearance-none {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none
+.grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr))
 }
 
 .grid-cols-12 {
@@ -3554,11 +3507,6 @@ details.collapse summary::-webkit-details-marker {
     padding: 1.5rem
 }
 
-.px-3 {
-    padding-left: .75rem;
-    padding-right: .75rem
-}
-
 .px-4 {
     padding-left: 1rem;
     padding-right: 1rem
@@ -3769,10 +3717,6 @@ details.collapse summary::-webkit-details-marker {
     line-height: 1.25
 }
 
-.tracking-wide {
-    letter-spacing: .025em
-}
-
 .text-\[\#FFE200\] {
     --tw-text-opacity: 1;
     color: rgb(255 226 0 / var(--tw-text-opacity))
@@ -3788,16 +3732,6 @@ details.collapse summary::-webkit-details-marker {
     color: rgb(156 163 175 / var(--tw-text-opacity))
 }
 
-.text-gray-600 {
-    --tw-text-opacity: 1;
-    color: rgb(75 85 99 / var(--tw-text-opacity))
-}
-
-.text-gray-700 {
-    --tw-text-opacity: 1;
-    color: rgb(55 65 81 / var(--tw-text-opacity))
-}
-
 .text-gray-900 {
     --tw-text-opacity: 1;
     color: rgb(17 24 39 / var(--tw-text-opacity))
@@ -3806,11 +3740,6 @@ details.collapse summary::-webkit-details-marker {
 .text-neutral-800 {
     --tw-text-opacity: 1;
     color: rgb(38 38 38 / var(--tw-text-opacity))
-}
-
-.text-red-500 {
-    --tw-text-opacity: 1;
-    color: rgb(239 68 68 / var(--tw-text-opacity))
 }
 
 .text-white {
@@ -4188,20 +4117,8 @@ details.collapse summary::-webkit-details-marker {
         margin-right: .5rem
     }
 
-    .md\:flex {
-        display: flex
-    }
-
     .md\:w-1\/2 {
         width: 50%
-    }
-
-    .md\:w-1\/3 {
-        width: 33.333333%
-    }
-
-    .md\:w-2\/3 {
-        width: 66.666667%
     }
 
     .md\:w-4\/12 {
@@ -4218,10 +4135,6 @@ details.collapse summary::-webkit-details-marker {
 
     .md\:flex-row {
         flex-direction: row
-    }
-
-    .md\:items-center {
-        align-items: center
     }
 
     .md\:justify-between {
@@ -4299,6 +4212,10 @@ details.collapse summary::-webkit-details-marker {
     .lg\:-translate-y-12 {
         --tw-translate-y: -3rem;
         transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skew(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
+    }
+
+    .lg\:grid-cols-2 {
+        grid-template-columns: repeat(2, minmax(0, 1fr))
     }
 
     .lg\:flex-row {
@@ -4421,10 +4338,6 @@ details.collapse summary::-webkit-details-marker {
 }
 
 @media (min-width: 1280px) {
-    .xl\:col-span-1 {
-        grid-column: span 1 / span 1
-    }
-
     .xl\:col-span-2 {
         grid-column: span 2 / span 2
     }
@@ -4447,10 +4360,6 @@ details.collapse summary::-webkit-details-marker {
 
     .xl\:w-28 {
         width: 7rem
-    }
-
-    .xl\:grid-cols-2 {
-        grid-template-columns: repeat(2, minmax(0, 1fr))
     }
 
     .xl\:grid-cols-5 {
