--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1570,17 +1570,7 @@ html {
     }
 }
 
-.avatar.placeholder>div {
-    display: flex;
-    align-items: center;
-    justify-content: center
-}
-
 @media (hover:hover) {
-    .label a:hover {
-        --tw-text-opacity: 1;
-        color: hsl(var(--bc) / var(--tw-text-opacity))
-    }
 
     .menu li>*:not(ul):not(.menu-title):not(details):active,
     .menu li>*:not(ul):not(.menu-title):not(details).active,
@@ -1963,16 +1953,6 @@ html {
     }
 }
 
-.label {
-    display: flex;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-    align-items: center;
-    justify-content: space-between;
-    padding: .5rem .25rem
-}
-
 .hero {
     display: grid;
     width: 100%;
@@ -1984,33 +1964,6 @@ html {
 .hero>* {
     grid-column-start: 1;
     grid-row-start: 1
-}
-
-.input {
-    flex-shrink: 1;
-    height: 3rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    font-size: 1rem;
-    line-height: 2;
-    line-height: 1.5rem;
-    border-width: 1px;
-    border-color: hsl(var(--bc) / var(--tw-border-opacity));
-    --tw-border-opacity: 0;
-    --tw-bg-opacity: 1;
-    background-color: hsl(var(--b1) / var(--tw-bg-opacity));
-    border-radius: var(--rounded-btn, .5rem)
-}
-
-.input-group>.input {
-    isolation: isolate
-}
-
-.input-group>*,
-.input-group>.input,
-.input-group>.textarea,
-.input-group>.select {
-    border-radius: 0
 }
 
 .link {
@@ -2127,21 +2080,6 @@ html {
     background-color: hsl(var(--b1) / var(--tw-bg-opacity))
 }
 
-.textarea {
-    flex-shrink: 1;
-    min-height: 3rem;
-    padding: .5rem 1rem;
-    font-size: .875rem;
-    line-height: 1.25rem;
-    line-height: 2;
-    border-width: 1px;
-    border-color: hsl(var(--bc) / var(--tw-border-opacity));
-    --tw-border-opacity: 0;
-    --tw-bg-opacity: 1;
-    background-color: hsl(var(--b1) / var(--tw-bg-opacity));
-    border-radius: var(--rounded-btn, .5rem)
-}
-
 .toggle {
     flex-shrink: 0;
     --tglbg: hsl(var(--b1));
@@ -2168,11 +2106,6 @@ html {
     border-top-width: 2px;
     --tw-bg-opacity: 1;
     background-color: hsl(var(--b1) / var(--tw-bg-opacity))
-}
-
-.btm-nav>* .label {
-    font-size: 1rem;
-    line-height: 1.5rem
 }
 
 .btn:active:hover,
@@ -2444,55 +2377,6 @@ details.collapse summary::-webkit-details-marker {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skew(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
 }
 
-.input[list]::-webkit-calendar-picker-indicator {
-    line-height: 1em
-}
-
-.input-bordered {
-    --tw-border-opacity: .2
-}
-
-.input:focus {
-    outline-style: solid;
-    outline-width: 2px;
-    outline-offset: 2px;
-    outline-color: hsl(var(--bc) / .2)
-}
-
-.input-warning {
-    --tw-border-opacity: 1;
-    border-color: hsl(var(--wa) / var(--tw-border-opacity))
-}
-
-.input-warning:focus {
-    outline-color: hsl(var(--wa) / 1)
-}
-
-.input-disabled,
-.input:disabled,
-.input[disabled] {
-    cursor: not-allowed;
-    --tw-border-opacity: 1;
-    border-color: hsl(var(--b2) / var(--tw-border-opacity));
-    --tw-bg-opacity: 1;
-    background-color: hsl(var(--b2) / var(--tw-bg-opacity));
-    --tw-text-opacity: .2
-}
-
-.input-disabled::-moz-placeholder,
-.input:disabled::-moz-placeholder,
-.input[disabled]::-moz-placeholder {
-    color: hsl(var(--bc) / var(--tw-placeholder-opacity));
-    --tw-placeholder-opacity: .2
-}
-
-.input-disabled::placeholder,
-.input:disabled::placeholder,
-.input[disabled]::placeholder {
-    color: hsl(var(--bc) / var(--tw-placeholder-opacity));
-    --tw-placeholder-opacity: .2
-}
-
 .link:focus {
     outline: 2px solid transparent;
     outline-offset: 2px
@@ -2501,22 +2385,6 @@ details.collapse summary::-webkit-details-marker {
 .link:focus-visible {
     outline: 2px solid currentColor;
     outline-offset: 2px
-}
-
-.loading {
-    pointer-events: none;
-    display: inline-block;
-    aspect-ratio: 1 / 1;
-    width: 1.5rem;
-    background-color: currentColor;
-    -webkit-mask-size: 100%;
-    mask-size: 100%;
-    -webkit-mask-repeat: no-repeat;
-    mask-repeat: no-repeat;
-    -webkit-mask-position: center;
-    mask-position: center;
-    -webkit-mask-image: url("data:image/svg+xml,%3Csvg width='24' height='24' stroke='%23000' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cstyle%3E.spinner_V8m1%7Btransform-origin:center;animation:spinner_zKoa 2s linear infinite%7D.spinner_V8m1 circle%7Bstroke-linecap:round;animation:spinner_YpZS 1.5s ease-out infinite%7D%40keyframes spinner_zKoa%7B100%25%7Btransform:rotate(360deg)%7D%7D%40keyframes spinner_YpZS%7B0%25%7Bstroke-dasharray:0 150;stroke-dashoffset:0%7D47.5%25%7Bstroke-dasharray:42 150;stroke-dashoffset:-16%7D95%25%2C100%25%7Bstroke-dasharray:42 150;stroke-dashoffset:-59%7D%7D%3C%2Fstyle%3E%3Cg class='spinner_V8m1'%3E%3Ccircle cx='12' cy='12' r='9.5' fill='none' stroke-width='3'%3E%3C%2Fcircle%3E%3C%2Fg%3E%3C%2Fsvg%3E");
-    mask-image: url("data:image/svg+xml,%3Csvg width='24' height='24' stroke='%23000' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cstyle%3E.spinner_V8m1%7Btransform-origin:center;animation:spinner_zKoa 2s linear infinite%7D.spinner_V8m1 circle%7Bstroke-linecap:round;animation:spinner_YpZS 1.5s ease-out infinite%7D%40keyframes spinner_zKoa%7B100%25%7Btransform:rotate(360deg)%7D%7D%40keyframes spinner_YpZS%7B0%25%7Bstroke-dasharray:0 150;stroke-dashoffset:0%7D47.5%25%7Bstroke-dasharray:42 150;stroke-dashoffset:-16%7D95%25%2C100%25%7Bstroke-dasharray:42 150;stroke-dashoffset:-59%7D%7D%3C%2Fstyle%3E%3Cg class='spinner_V8m1'%3E%3Ccircle cx='12' cy='12' r='9.5' fill='none' stroke-width='3'%3E%3C%2Fcircle%3E%3C%2Fg%3E%3C%2Fsvg%3E")
 }
 
 :where(.menu li:empty) {
@@ -2605,51 +2473,6 @@ details.collapse summary::-webkit-details-marker {
     margin-top: -25px
 }
 
-.mockup-browser .mockup-browser-toolbar .input {
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    height: 1.75rem;
-    width: 24rem;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    --tw-bg-opacity: 1;
-    background-color: hsl(var(--b2) / var(--tw-bg-opacity));
-    padding-left: 2rem
-}
-
-.mockup-browser .mockup-browser-toolbar .input:before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: .5rem;
-    aspect-ratio: 1 / 1;
-    height: .75rem;
-    --tw-translate-y: -50%;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skew(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-    border-radius: 9999px;
-    border-width: 2px;
-    border-color: currentColor;
-    opacity: .6
-}
-
-.mockup-browser .mockup-browser-toolbar .input:after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 1.25rem;
-    height: .5rem;
-    --tw-translate-y: 25%;
-    --tw-rotate: -45deg;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skew(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-    border-radius: 9999px;
-    border-width: 1px;
-    border-color: currentColor;
-    opacity: .6
-}
-
 @keyframes modal-pop {
     0% {
         opacity: 0
@@ -2722,47 +2545,6 @@ details.collapse summary::-webkit-details-marker {
     line-height: 1rem;
     font-weight: 700;
     color: hsl(var(--bc) / .6)
-}
-
-.textarea:focus {
-    outline-style: solid;
-    outline-width: 2px;
-    outline-offset: 2px;
-    outline-color: hsl(var(--bc) / .2)
-}
-
-.textarea-warning {
-    --tw-border-opacity: 1;
-    border-color: hsl(var(--wa) / var(--tw-border-opacity))
-}
-
-.textarea-warning:focus {
-    outline-color: hsl(var(--wa) / 1)
-}
-
-.textarea-disabled,
-.textarea:disabled,
-.textarea[disabled] {
-    cursor: not-allowed;
-    --tw-border-opacity: 1;
-    border-color: hsl(var(--b2) / var(--tw-border-opacity));
-    --tw-bg-opacity: 1;
-    background-color: hsl(var(--b2) / var(--tw-bg-opacity));
-    --tw-text-opacity: .2
-}
-
-.textarea-disabled::-moz-placeholder,
-.textarea:disabled::-moz-placeholder,
-.textarea[disabled]::-moz-placeholder {
-    color: hsl(var(--bc) / var(--tw-placeholder-opacity));
-    --tw-placeholder-opacity: .2
-}
-
-.textarea-disabled::placeholder,
-.textarea:disabled::placeholder,
-.textarea[disabled]::placeholder {
-    color: hsl(var(--bc) / var(--tw-placeholder-opacity));
-    --tw-placeholder-opacity: .2
 }
 
 @keyframes toast-pop {
@@ -2984,6 +2766,10 @@ details.collapse summary::-webkit-details-marker {
     grid-column: span 12 / span 12
 }
 
+.-m-12 {
+    margin: -3rem
+}
+
 .m-1 {
     margin: .25rem
 }
@@ -3045,6 +2831,10 @@ details.collapse summary::-webkit-details-marker {
     margin-bottom: 8rem
 }
 
+.mb-4 {
+    margin-bottom: 1rem
+}
+
 .mb-6 {
     margin-bottom: 1.5rem
 }
@@ -3053,12 +2843,24 @@ details.collapse summary::-webkit-details-marker {
     margin-bottom: 2rem
 }
 
+.ml-2 {
+    margin-left: .5rem
+}
+
 .ml-auto {
     margin-left: auto
 }
 
+.mr-1 {
+    margin-right: .25rem
+}
+
 .mr-2 {
     margin-right: .5rem
+}
+
+.mr-3 {
+    margin-right: .75rem
 }
 
 .mr-auto {
@@ -3067,6 +2869,10 @@ details.collapse summary::-webkit-details-marker {
 
 .mt-0 {
     margin-top: 0
+}
+
+.mt-0\.5 {
+    margin-top: .125rem
 }
 
 .mt-1 {
@@ -3097,6 +2903,10 @@ details.collapse summary::-webkit-details-marker {
     margin-top: 1.75rem
 }
 
+.mt-auto {
+    margin-top: auto
+}
+
 .block {
     display: block
 }
@@ -3107,6 +2917,10 @@ details.collapse summary::-webkit-details-marker {
 
 .flex {
     display: flex
+}
+
+.inline-flex {
+    display: inline-flex
 }
 
 .table {
@@ -3225,12 +3039,8 @@ details.collapse summary::-webkit-details-marker {
     max-width: 24rem
 }
 
-.max-w-xl {
-    max-width: 36rem
-}
-
-.max-w-xs {
-    max-width: 20rem
+.flex-shrink-0 {
+    flex-shrink: 0
 }
 
 .flex-grow {
@@ -3259,10 +3069,6 @@ details.collapse summary::-webkit-details-marker {
     cursor: pointer
 }
 
-.grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr))
-}
-
 .grid-cols-12 {
     grid-template-columns: repeat(12, minmax(0, 1fr))
 }
@@ -3285,6 +3091,10 @@ details.collapse summary::-webkit-details-marker {
 
 .content-center {
     align-content: center
+}
+
+.items-start {
+    align-items: flex-start
 }
 
 .items-center {
@@ -3368,12 +3178,6 @@ details.collapse summary::-webkit-details-marker {
     margin-bottom: calc(1.5rem * var(--tw-space-y-reverse))
 }
 
-.space-y-8>:not([hidden])~:not([hidden]) {
-    --tw-space-y-reverse: 0;
-    margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(2rem * var(--tw-space-y-reverse))
-}
-
 .place-self-center {
     place-self: center
 }
@@ -3414,6 +3218,14 @@ details.collapse summary::-webkit-details-marker {
     border-width: 4px
 }
 
+.border-b-2 {
+    border-bottom-width: 2px
+}
+
+.border-r-2 {
+    border-right-width: 2px
+}
+
 .border-t-4 {
     border-top-width: 4px
 }
@@ -3429,6 +3241,16 @@ details.collapse summary::-webkit-details-marker {
 .border-\[\#3498db\] {
     --tw-border-opacity: 1;
     border-color: rgb(52 152 219 / var(--tw-border-opacity))
+}
+
+.border-gray-100 {
+    --tw-border-opacity: 1;
+    border-color: rgb(243 244 246 / var(--tw-border-opacity))
+}
+
+.border-gray-200 {
+    --tw-border-opacity: 1;
+    border-color: rgb(229 231 235 / var(--tw-border-opacity))
 }
 
 .border-white {
@@ -3454,6 +3276,11 @@ details.collapse summary::-webkit-details-marker {
 .bg-gray-800 {
     --tw-bg-opacity: 1;
     background-color: rgb(31 41 55 / var(--tw-bg-opacity))
+}
+
+.bg-indigo-50 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(238 242 255 / var(--tw-bg-opacity))
 }
 
 .bg-transparent {
@@ -3491,6 +3318,10 @@ details.collapse summary::-webkit-details-marker {
     padding: 2.5rem
 }
 
+.p-12 {
+    padding: 3rem
+}
+
 .p-2 {
     padding: .5rem
 }
@@ -3507,9 +3338,19 @@ details.collapse summary::-webkit-details-marker {
     padding: 1.5rem
 }
 
+.px-2 {
+    padding-left: .5rem;
+    padding-right: .5rem
+}
+
 .px-4 {
     padding-left: 1rem;
     padding-right: 1rem
+}
+
+.px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem
 }
 
 .px-6 {
@@ -3594,12 +3435,20 @@ details.collapse summary::-webkit-details-marker {
     padding-bottom: 2rem
 }
 
+.pl-4 {
+    padding-left: 1rem
+}
+
 .pl-6 {
     padding-left: 1.5rem
 }
 
 .pr-1 {
     padding-right: .25rem
+}
+
+.pr-3 {
+    padding-right: .75rem
 }
 
 .pt-1 {
@@ -3713,8 +3562,16 @@ details.collapse summary::-webkit-details-marker {
     line-height: 1
 }
 
+.leading-relaxed {
+    line-height: 1.625
+}
+
 .leading-tight {
     line-height: 1.25
+}
+
+.tracking-widest {
+    letter-spacing: .1em
 }
 
 .text-\[\#FFE200\] {
@@ -3735,6 +3592,11 @@ details.collapse summary::-webkit-details-marker {
 .text-gray-900 {
     --tw-text-opacity: 1;
     color: rgb(17 24 39 / var(--tw-text-opacity))
+}
+
+.text-indigo-500 {
+    --tw-text-opacity: 1;
+    color: rgb(99 102 241 / var(--tw-text-opacity))
 }
 
 .text-neutral-800 {
@@ -3886,11 +3748,6 @@ details.collapse summary::-webkit-details-marker {
     background-color: rgb(255 226 0 / var(--tw-bg-opacity))
 }
 
-.hover\:bg-\[\#c79305\]:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgb(199 147 5 / var(--tw-bg-opacity))
-}
-
 .hover\:bg-black:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(0 0 0 / var(--tw-bg-opacity))
@@ -3993,23 +3850,9 @@ details.collapse summary::-webkit-details-marker {
         --tw-bg-opacity: 1;
         background-color: rgb(107 114 128 / var(--tw-bg-opacity))
     }
-
-    .dark\:text-gray-300 {
-        --tw-text-opacity: 1;
-        color: rgb(209 213 219 / var(--tw-text-opacity))
-    }
-
-    .dark\:text-gray-400 {
-        --tw-text-opacity: 1;
-        color: rgb(156 163 175 / var(--tw-text-opacity))
-    }
 }
 
 @media (min-width: 640px) {
-    .sm\:col-span-2 {
-        grid-column: span 2 / span 2
-    }
-
     .sm\:mx-12 {
         margin-left: 3rem;
         margin-right: 3rem
@@ -4093,30 +3936,18 @@ details.collapse summary::-webkit-details-marker {
         text-align: left
     }
 
+    .sm\:text-3xl {
+        font-size: 1.875rem;
+        line-height: 2.25rem
+    }
+
     .sm\:text-4xl {
         font-size: 2.25rem;
         line-height: 2.5rem
     }
-
-    .sm\:text-xl {
-        font-size: 1.25rem;
-        line-height: 1.75rem
-    }
 }
 
 @media (min-width: 768px) {
-    .md\:mb-0 {
-        margin-bottom: 0
-    }
-
-    .md\:ml-2 {
-        margin-left: .5rem
-    }
-
-    .md\:mr-2 {
-        margin-right: .5rem
-    }
-
     .md\:w-1\/2 {
         width: 50%
     }
@@ -4125,16 +3956,8 @@ details.collapse summary::-webkit-details-marker {
         width: 33.333333%
     }
 
-    .md\:grid-cols-1 {
-        grid-template-columns: repeat(1, minmax(0, 1fr))
-    }
-
     .md\:grid-cols-2 {
         grid-template-columns: repeat(2, minmax(0, 1fr))
-    }
-
-    .md\:flex-row {
-        flex-direction: row
     }
 
     .md\:justify-between {
@@ -4155,10 +3978,6 @@ details.collapse summary::-webkit-details-marker {
     .lg\:my-24 {
         margin-top: 6rem;
         margin-bottom: 6rem
-    }
-
-    .lg\:mb-16 {
-        margin-bottom: 4rem
     }
 
     .lg\:mt-20 {
@@ -4212,10 +4031,6 @@ details.collapse summary::-webkit-details-marker {
     .lg\:-translate-y-12 {
         --tw-translate-y: -3rem;
         transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skew(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
-    }
-
-    .lg\:grid-cols-2 {
-        grid-template-columns: repeat(2, minmax(0, 1fr))
     }
 
     .lg\:flex-row {
@@ -4348,10 +4163,6 @@ details.collapse summary::-webkit-details-marker {
 
     .xl\:mt-20 {
         margin-top: 5rem
-    }
-
-    .xl\:mt-5 {
-        margin-top: 1.25rem
     }
 
     .xl\:w-1\/2 {
